feat: introduce new topic details to the frontend
