# backend/internal/kafka/model/TopicDetails.go
@@ -3,12 +3,12 @@ package model
 type TopicDetails struct {
 	Name              string            `json:"name" validate:"required"`
 	NumPartitions     int32             `json:"numPartitions" validate:"required"`
-	ReplicationFactor int16             `json:"replicationFactor"`
-	IsInternal        bool              `json:"isInternal"`
-	CleanupPolicy     CleanupPolicy     `json:"cleanupPolicy"`
-	RetentionMs       RetentionMs       `json:"retentionMs"`
-	RetentionBytes    int64             `json:"retentionBytes"`
-	AdditionalConfigs map[string]string `json:"additionalConfigs"`
+	ReplicationFactor int16             `json:"replicationFactor" validate:"required"`
+	IsInternal        bool              `json:"isInternal" validate:"required"`
+	CleanupPolicy     CleanupPolicy     `json:"cleanupPolicy" validate:"required"`
+	RetentionMs       RetentionMs       `json:"retentionMs" validate:"required"`
+	RetentionBytes    int64             `json:"retentionBytes" validate:"required"`
+	AdditionalConfigs map[string]string `json:"additionalConfigs" validate:"required"`
 }
 
 type CleanupPolicy string
@@ -21,6 +21,6 @@ const (
 )
 
 type RetentionMs struct {
-	Indefinite bool  `json:"indefinite"`
-	Value      int64 `json:"value"`
+	Indefinite bool  `json:"indefinite" validate:"required"`
+	Value      int64 `json:"value" validate:"required"`
 }
